# industrial-practice-helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  practice-bot.spec  pyproject.toml
bot_max/: handlers.py  main.py
bot_tg/: handlers.py  main.py
common/: config.py  logger.py  storage.py
